# dips

./: .env  .gitignore  Cargo.toml  README.md  configuration.yml  justfile
.github/workflows/: release.yaml
.sqlx/: query-00514036b674b30537cb85dea050c9235a8df2729aa5bb1a4f46dbcf1015c5f6.json  query-03cf57b82311fcef1a9d34150a7e30c5bdc2e12ff89c60756b8e00eb39ce3f69.json  query-06507f0eede05e71a5b484461c61a62451da84b5c0327cf00287d9fd1ecef3a4.json  query-0f6c08b309d981de884008680b8a45a90e5194c45ed1228a32e54a44c26843ba.json  query-1dd8502ba76389365885fcdea45c9f2eee201ca2a55bebf42fa4593658bc6c81.json  query-2304e5af41e091c0c741a1517613eb791da01af12fb46bcd2bf9d3dffde8cdd8.json  query-2c06f57256c94d572b1517c1ada2ca38d4d69efb28c014fd71c1124ff9f68f52.json  query-3c2d62426b09e68c822313ec1a7160809e909ad1738aacf00613038f58146668.json  query-3e826b0cc84253d5d38f95519a4202a62efb26b4dd585df03f0138f61ce17ff3.json  query-65d3f94fb6171e98466c04624a9728d8d6f53220841e17ad696c87e92dc04087.json  query-8a8b9c39d4fc9cf2cf7e1c55732d6879e6ca38cb36d3ef8cf9b4e471a485112b.json  query-91018a1181ff2cb76fcf69f29a9a486a53aa55cb05591095d4668fa7c03da708.json  query-a052cefa54ee0e5df8820785c37478741e87212a31e8645d055052d109c2a076.json  query-af73dc7313e03dbb2cd67e1ad2dfef383cf949cf1c1d937baf7204a73e54785f.json  query-cde267b7c830b552d306f183f74951d2ffd1722c89f9046a7d4a92557da5018c.json  query-ebd521c77ab531470b2854b7ff3da51d5fd91433564ce77b436ec38743dd6bb5.json  query-f34ebf62784203c25bbcb6e79a43887fce0c8494d5b14c8790a631eb3815cabd.json
migrations/: 20240708113256_create_value_table.sql  20240710080532_add_dir_context_table.sql  20240929151913_create-dir-context-groups.sql  20241011151824_create-dips-tags.sql
recipes/git/: README.md  dip.json
src/: cli.rs  configuration.rs  database.rs  git.rs  lib.rs  main.rs
src/app/: state.rs
src/commands/: add.rs  core.rs  get.rs  init.rs  mod.rs  play.rs  recipe.rs
src/game/: app.rs  mod.rs  tui.rs  ui.rs  ui_utils.rs
src/ghi/: comerator.rs  comperator.rs  input_lexer.rs  lexer.rs  mod.rs  parser.rs
src/models/: context_group.rs  dip.rs  dir_context.rs  mod.rs  tag.rs
tests/: helpers.rs
tests/cli/: add.rs  helpers.rs  main.rs
