[package]
name = "dips"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "dips"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
color-eyre = "0.6.3"
config = "0.14.0"
dirs = "5.0.1"
fuzzy-matcher = "0.3.7"
git2 = { version = "0.19.0", default-features = false }
ratatui = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["macros", "uuid", "chrono", "migrate", "sqlite", "runtime-tokio-rustls"]}
thiserror = "1.0.64"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
fake = "2.10.0"
rand = "0.8.5"
tempfile = "3.13.0"
tokio = { version = "1.38.0", features = ["full"] }
